# science-live-pipeline

./: .all-contributorsrc  .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: docs.yml
docs/: Makefile  conf.py  index.md  references.bib
docs/_static/: custom.css
docs/api/: index.md
docs/contributing/: index.md
docs/getting-started/: index.md
science_live/: __init__.py
science_live/core/: __init__.py  config.py  endpoints.py
science_live/demo/: __init__.py  cli.py
science_live/pipeline/: __init__.py  common.py  entity_extractor.py  nl_generator.py  pipeline.py  query_executor.py  question_processor.py  result_processor.py  rosetta_generator.py  sparql_generator.py
science_live/setup/: __init__.py  dev.py  main.py  validate.py  wordnet.py
science_live/utils/: __init__.py  test_runner.py
scripts/: __init__.py  setup_wordnet.py  validate_install.py
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py  sample_entities.py  sample_questions.py  sample_sparql_results.py
tests/integration/: __init__.py  test_end_to_end.py
tests/test_core/: __init__.py  test_config.py  test_endpoints.py
tests/test_pipeline/: test_common.py  test_entity_extractor.py  test_pipeline.py  test_query_executor.py  test_question_processor.py  test_result_processor.py  test_rosetta_generator.py  test_sparql_generator.py
